--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -120,15 +120,13 @@ jobs:
           npm run build
           cd dist
           tar -cf ../dist.tar.gz .
-          ls
           cd ..
-          ls
 
       - name: Archive built website
         uses: actions/upload-artifact@v3
         with:
           name: built-website
-          path: dist.tar.gz
+          path: frontend/dist.tar.gz
           if-no-files-found: error
 
   deploy:
@@ -158,6 +156,9 @@ jobs:
 
       - name: Extract built website
         run: |
+          ls
+          echo dotdot
+          ls ..
           mkdir dist
           cd dist
           tar -xf ../dist.tar.gz
